MDL-40829 courses heading: additional fix for missing course icon, alignment fix and behat test

--- a/theme/fusion/style/core.css
+++ b/theme/fusion/style/core.css
@@ -258,12 +258,25 @@ margin: 0;
 /* Courses
 ----------------------------*/
 
+.site-news-forum h2,
+.frontpage-course-list h2,
+.frontpage-category-names h2,
+.frontpage-category-combo h2 {
+    font-weight: normal;
+    color:#999;
+    font-size: 1.5em;
+    border-bottom:1px dotted #eee;
+}
+
 .coursebox {
     border-color: #eee;
 }
-
-.coursebox > .info > .name {font-size: 1.1em;}
-.course_category_tree .category > .info .name { font-size: 1.2em;}
+.coursebox .info a {
+    background-position: left;
+}
+.dir-rtl .coursebox .info a {
+    background-position: right;
+}
 
 .coursebox .content .teachers,
 .coursebox .content .courseimage,
