--- a/theme/mymobile/style/core.css
+++ b/theme/mymobile/style/core.css
@@ -160,7 +160,7 @@ ul.section li.activity .mod-indent {
  .category a .ui-li-count {
     right: 1em;
 }
-.coursebox > .info > .name {
+.coursebox > .info a {
     font-size: 1.2em;
 }
 .coursebox div.summary {
