--- a/theme/splash/style/core.css
+++ b/theme/splash/style/core.css
@@ -340,14 +340,6 @@ img.icon {
 li.activity {
     padding-bottom:5px;
 }
-.coursebox > .info > .name, #region-main .coursebox > .info > h3.name {
-    margin: 5px;
-    padding: 0;
-}
-#region-main .course_category_tree .category > .info h3.name,
-#region-main .course_category_tree .category > .info h4.name {
-    padding: 2px 18px;
-}
 .que .info{
     width: 10em;
 }
